k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 80
      - path: /documents
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 8888
      - path: /weather
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 8888
      - path: /citylist
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 8888
      - path: /history
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 8888
